pkg/ibmvpc/examples/out/analysis_out/tg-prefix-filters_all_vpcs_subnetsBased_withPGW.txt
Connectivity between VPCs connected by TGW local-tg-ky (UID: crn:550)
test-vpc0-ky/subnet0 => test-vpc1-ky/subnet10 : All Connections * 
test-vpc0-ky/subnet0 => test-vpc1-ky/subnet11 : All Connections * 
test-vpc0-ky/subnet0 => test-vpc2-ky/subnet20 : All Connections * 
test-vpc0-ky/subnet1 => test-vpc1-ky/subnet10 : All Connections * 
test-vpc0-ky/subnet1 => test-vpc1-ky/subnet11 : All Connections * 
test-vpc0-ky/subnet1 => test-vpc2-ky/subnet20 : All Connections * 
test-vpc0-ky/subnet2 => test-vpc1-ky/subnet10 : All Connections * 
test-vpc0-ky/subnet2 => test-vpc1-ky/subnet11 : All Connections * 
test-vpc0-ky/subnet2 => test-vpc2-ky/subnet20 : All Connections
test-vpc0-ky/subnet3 => test-vpc1-ky/subnet10 : All Connections
test-vpc0-ky/subnet3 => test-vpc1-ky/subnet11 : All Connections
test-vpc0-ky/subnet3 => test-vpc2-ky/subnet20 : All Connections
test-vpc0-ky/subnet4 => test-vpc1-ky/subnet10 : All Connections
test-vpc0-ky/subnet4 => test-vpc1-ky/subnet11 : All Connections
test-vpc0-ky/subnet4 => test-vpc2-ky/subnet20 : All Connections
test-vpc0-ky/subnet5 => test-vpc1-ky/subnet10 : All Connections
test-vpc0-ky/subnet5 => test-vpc1-ky/subnet11 : All Connections
test-vpc0-ky/subnet5 => test-vpc2-ky/subnet20 : All Connections
test-vpc1-ky/subnet10 => test-vpc0-ky/subnet3 : All Connections
test-vpc1-ky/subnet10 => test-vpc0-ky/subnet4 : All Connections
test-vpc1-ky/subnet10 => test-vpc0-ky/subnet5 : All Connections
test-vpc1-ky/subnet10 => test-vpc2-ky/subnet20 : All Connections
test-vpc1-ky/subnet11 => test-vpc0-ky/subnet3 : All Connections
test-vpc1-ky/subnet11 => test-vpc0-ky/subnet4 : All Connections
test-vpc1-ky/subnet11 => test-vpc0-ky/subnet5 : All Connections
test-vpc1-ky/subnet11 => test-vpc2-ky/subnet20 : All Connections
test-vpc2-ky/subnet20 => test-vpc0-ky/subnet2 : All Connections
test-vpc2-ky/subnet20 => test-vpc0-ky/subnet3 : All Connections
test-vpc2-ky/subnet20 => test-vpc0-ky/subnet4 : All Connections
test-vpc2-ky/subnet20 => test-vpc0-ky/subnet5 : All Connections
test-vpc2-ky/subnet20 => test-vpc1-ky/subnet10 : All Connections
test-vpc2-ky/subnet20 => test-vpc1-ky/subnet11 : All Connections

Subnet connectivity for VPC test-vpc0-ky
subnet0 => subnet1 : All Connections
subnet0 => subnet2 : All Connections
subnet0 => subnet3 : All Connections
subnet0 => subnet4 : All Connections
subnet0 => subnet5 : All Connections
subnet1 => subnet0 : All Connections
subnet1 => subnet2 : All Connections
subnet1 => subnet3 : All Connections
subnet1 => subnet4 : All Connections
subnet1 => subnet5 : All Connections
subnet2 => subnet0 : All Connections
subnet2 => subnet1 : All Connections
subnet2 => subnet3 : All Connections
subnet2 => subnet4 : All Connections
subnet2 => subnet5 : All Connections
subnet3 => subnet0 : All Connections
subnet3 => subnet1 : All Connections
subnet3 => subnet2 : All Connections
subnet3 => subnet4 : All Connections
subnet3 => subnet5 : All Connections
subnet4 => subnet0 : All Connections
subnet4 => subnet1 : All Connections
subnet4 => subnet2 : All Connections
subnet4 => subnet3 : All Connections
subnet4 => subnet5 : All Connections
subnet5 => subnet0 : All Connections
subnet5 => subnet1 : All Connections
subnet5 => subnet2 : All Connections
subnet5 => subnet3 : All Connections
subnet5 => subnet4 : All Connections

Subnet connectivity for VPC test-vpc1-ky
subnet10 => subnet11 : All Connections
subnet11 => subnet10 : All Connections

Subnet connectivity for VPC test-vpc2-ky
<nothing to report>

connections are stateful (on TCP) unless marked with *
